@@ -1,8 +1,10 @@
 Changes
+examples/lcd_working.py
 lib/RPi/WiringPi.pm
 lib/RPi/WiringPi/Board.pm
 lib/RPi/WiringPi/LCD.pm
 lib/RPi/WiringPi/Pin.pm
+lib/RPi/WiringPi/Util.pm
 Makefile.PL
 MANIFEST
 MANIFEST.SKIP
