@@ -123,87 +123,6 @@ OPERATIONAL METHODS
     Returns a RPi::WiringPi::LCD object, which allows you to fully
     manipulate LCD displays connected to your Raspberry Pi.
 
- cleanup()
-
-    Resets all registered pins back to default settings (off). It's
-    important that this method be called in each application.
-
-HELPER METHODS
-
-    These methods aren't normally needed by end-users. They're available
-    for those who want to write their own libraries.
-
- gpio_scheme()
-
-    Returns the current pin mapping in use. Returns "NULL" it has not yet
-    been set, "WPI" if using wiringPi mapping, "BCM" for standard GPIO map
-    and "PHYS" if using the physical pin map directly.
-
- gpio_map($scheme)
-
-    Returns a hash reference in the following format:
-
-        $map => {
-            phys_pin_num => gpio_pin_num,
-            ...
-        };
-
-    If no scheme is in place, return will be an empty hash reference.
-
-    Parameters:
-
-    $scheme
-
-      Optional: By default, we'll check if you've already run a setup
-      routine, and if so, we'll use the scheme currently in use. If one is
-      not in use and no $scheme has been sent in, we'll use 'NULL',
-      otherwise if a scheme is sent in, the return will be:
-
-      For 'WPI' scheme (wiringPi's numbering scheme):
-
-          $map = {
-              phys_pin_num => wiringPi_gpio_pin_num,
-              ....
-          };
-
-      For 'BCM' scheme (Broadcom's numbering scheme (printed on the
-      board)):
-
-          $map = {
-              phys_pin_num => Broadcom_gpio_pin_num,
-              ...
-          };
-
- registered_pins()
-
-    Returns an array of RPi::WiringPi::Pin objects that are currently
-    registered, and deemed to be in use.
-
- register_pin($pin_obj)
-
-    Registers a GPIO pin within the system for error checking, and proper
-    resetting of the pins in use when required.
-
-    Parameters:
-
-    $pin_obj
-
-      Mandatory: An object instance of RPi::WiringPi::Pin class.
-
- unregister_pin($pin_obj)
-
-    Exactly the opposite of register_pin().
-
-ENVIRONMENT VARIABLES
-
-    There are certain environment variables available to aid in testing on
-    non-Raspberry Pi boards.
-
- NO_BOARD
-
-    Set to true, will bypass the wiringPi board checks. False will
-    re-enable them.
-
 IMPORTANT NOTES
 
     - wiringPi <http://wiringpi.com> must be installed prior to
